--- a/mixpresso-web/src/index.css
+++ b/mixpresso-web/src/index.css
@@ -13,7 +13,7 @@
   }
 
   .main-text {
-    @apply max-w-[80%] mx-auto font-sora text-white text-center font-semibold text-[24px] pt-5;
+    @apply max-w-[80%] sm:max-w-[400px] mx-auto font-sora text-white text-center font-semibold text-[24px] sm:text-[30px] pt-5;
   }
 
   .sub-text {
