--- a/mixpresso-web/src/index.css
+++ b/mixpresso-web/src/index.css
@@ -5,7 +5,12 @@
 @layer components {
   /* Home */
   .container {
-    @apply max-w-[300px] sm:max-w-xl md:max-w-[840px] lg:max-w-[940px] xl:max-w-[1040px] 2xl:max-w-[1040px];
+    @apply max-w-[300px] sm:max-w-xl md:max-w-[840px] lg:max-w-[940px] xl:max-w-[1040px] 2xl:max-w-[1300px];
+  }
+
+  /* Header */
+  .menu-lines {
+    @apply border-black border-[1.5px] rounded-full;
   }
 
   /* GetStarted */
@@ -23,9 +28,5 @@
 
   .sub-text {
     @apply max-w-[80%] mx-auto font-sora text-center text-sm text-[#A9A9A9] py-4;
-  }
-
-  img {
-    @apply w-full h-full;
   }
 }
